[gd_scene load_steps=5 format=3 uid="uid://bdgmtgvgqfwj0"]

[ext_resource type="Script" path="res://Scripts/codex.gd" id="1_i8id5"]
[ext_resource type="Texture2D" uid="uid://bhl5ysdtvxnqh" path="res://Assets/UI/codex.png" id="1_pr4qg"]
[ext_resource type="PackedScene" uid="uid://c4lvsnq5ef3lw" path="res://Scenes/page.tscn" id="3_tgjig"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1uwkw"]

[node name="Codex" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i8id5")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1uwkw")

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("1_pr4qg")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/PanelContainer/TextureRect"]
layout_mode = 2
offset_right = 864.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/PanelContainer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="LeftPage" parent="AspectRatioContainer/PanelContainer/TextureRect/HBoxContainer/MarginContainer" instance=ExtResource("3_tgjig")]
layout_mode = 2
size_flags_horizontal = 3

[node name="PrevButton" type="Button" parent="AspectRatioContainer/PanelContainer/TextureRect/HBoxContainer/MarginContainer/LeftPage"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "<"

[node name="MarginContainer2" type="MarginContainer" parent="AspectRatioContainer/PanelContainer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="RightPage" parent="AspectRatioContainer/PanelContainer/TextureRect/HBoxContainer/MarginContainer2" instance=ExtResource("3_tgjig")]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="AspectRatioContainer/PanelContainer/TextureRect/HBoxContainer/MarginContainer2/RightPage"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = ">"

[connection signal="pressed" from="AspectRatioContainer/PanelContainer/TextureRect/HBoxContainer/MarginContainer/LeftPage/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer/PanelContainer/TextureRect/HBoxContainer/MarginContainer2/RightPage/NextButton" to="." method="_on_next_button_pressed"]
